# TRIDENT

./: .gitignore  .readthedocs.yaml  DETAILS.md  README.md  pyproject.toml  run_batch_of_slides.py  run_single_slide.py  setup.py  tsne_h5_sampler.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
docs/: api.rst  citation.rst  conf.py  faq.rst  features.rst  index.rst  installation.rst  overview.rst  quickstart.rst  requirements.txt  tutorials.rst
docs/cli_helpers/: cli_generate.py
tests/: test_encoder_same_local_hf.py  test_openslidewsi.py  test_patch_encoders.py  test_patcher.py  test_processor.py  test_segmentation_models.py  test_slide_encoders.py
trident/: Concurrency.py  Converter.py  IO.py  InferenceStrategy.py  Maintenance.py  Processor.py  Visualization.py  __init__.py
trident/patch_encoder_models/: __init__.py  load.py  local_ckpts.json
trident/segmentation_models/: __init__.py  load.py  local_ckpts.json  probabilistic_sampler.py  sam_model.py
trident/slide_encoder_models/: __init__.py  load.py  local_ckpts.json
trident/wsi_objects/: CuCIMWSI.py  ImageWSI.py  OpenSlideWSI.py  SDPCWSI.py  SdpcWSI  WSI.py  WSIFactory.py  WSIPatcher.py  (+1 more)
tutorials/: 1-Step-by-Step-Patch-Feature-Extraction-with-Trident.ipynb  2-Using-Trident-With-Your-Custom-Patch-Encoder.ipynb  3-Building-Attention-Heatmaps-for-Your-Model.ipynb  3-Training-a-WSI-Classification-Model-with-ABMIL-and-Heatmaps.ipynb  3-Training-a-WSI-Classification-Model-with-ABMIL.ipynb  4-Getting-Attention-Heatmaps-from-Threads.ipynb
(+5 files in other folders)
